--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "knex": "^0.13.0",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
+    "path": "^0.12.7",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   }
